--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,6 +3,11 @@
   height: 10vh;
   background-color: #1c3548;
 }
+.navbar-container img {
+  margin-top: 16px;
+  margin-left: 16px;
+  height: 60px;
+}
 
 .navbar-logo-container {
   flex: 1;
