--- a/src/containers/About/About.css
+++ b/src/containers/About/About.css
@@ -52,3 +52,25 @@
   width: 600px;
   color: whitesmoke;
 }
+
+.earth-container {
+  position: absolute;
+  bottom: -55px;
+  left: 46%;
+  right: 56%;
+  cursor: pointer;
+}
+.earth-container img {
+  height: 120px;
+}
+
+.about-extender {
+  background: rgb(21, 39, 72);
+  background: linear-gradient(
+    0deg,
+    rgba(21, 39, 72, 1) 0%,
+    rgba(28, 53, 72, 1) 100%
+  );
+  height: 10vh;
+  z-index: 1;
+}
