--- a/src/containers/About/About.css
+++ b/src/containers/About/About.css
@@ -3,13 +3,13 @@
   top: 40px;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 90%;
 }
 
 .about-container {
   min-height: 50vh;
   align-items: center;
-  margin: 140px 0px 0px 120px;
+  margin: 120px 0px 0px 120px;
 }
 
 .introduction {
@@ -41,6 +41,12 @@
   color: #7a378b;
 }
 
+.ganster-shades {
+  height: 32px;
+  position: relative;
+  top: 8px;
+}
+
 .long-description {
   margin-top: 12px;
   width: 600px;
@@ -49,10 +55,11 @@
 
 .earth-container {
   position: absolute;
-  bottom: -55px;
-  right: 1%;
+  /* bottom: -55px; */
+  top: 20%;
+  right: 12%;
   cursor: pointer;
 }
 .earth-container img {
-  height: 120px;
+  height: 140px;
 }
