--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -15,5 +15,5 @@
   padding: 0;
   margin: 0;
   font-family: "D-DIN", sans-serif;
-  cursor: url(../../assets/images/cursor.cur), pointer;
+  cursor: url(../../assets/images/cursor.cur), auto;
 }
