--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -10,6 +10,35 @@
   font-weight: bold;
 }
 
+@font-face {
+  font-family: "Lato";
+  src: url(../../assets/fonts/Lato-Thin.ttf) format("truetype");
+  font-weight: 200;
+}
+
+@font-face {
+  font-family: "Lato";
+  src: url(../../assets/fonts/Lato-Light.ttf) format("truetype");
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: "Lato";
+  src: url(../../assets/fonts/Lato-Regular.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Lato";
+  src: url(../../assets/fonts/Lato-Bold.ttf) format("truetype");
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: "Lato";
+  src: url(../../assets/fonts/Lato-Black.ttf) format("truetype");
+  font-weight: 600;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
